@@ -51,6 +51,7 @@ process {
         "-R \"@RG\\tID:${meta.id}\\tPU:${meta.id}\\tSM:${meta.id}\\tLB:${meta.id}\\tPL:illumina\"",
 	params.sequencingCenter ? "CN:${params.sequencingCenter}\\t" : ""
     ].join(' ').trim() }
+    ext.prefix = { params.splitFastq ? "${meta.id}_${meta.chunk}" : "${meta.id}" }
   }
 
   withName:'bwamem2' {
@@ -73,28 +74,30 @@ process {
         "-R \"@RG\\tID:${meta.id}\\tPU:${meta.id}\\tSM:${meta.id}\\tLB:${meta.id}\\tPL:illumina\"",
         params.sequencingCenter ? "CN:${params.sequencingCenter}\\t" : ""
     ].join(' ').trim() }
+    ext.prefix = { params.splitFastq ? "${meta.id}_${meta.chunk}" : "${meta.id}" }
   }
 
   withName:'dragmap' {
-        publishDir = [
-          [
-             path: { "${params.outDir}/preprocessing/${meta.id}/bams/" },
-             mode: 'copy',
-             pattern: "*.bam",
-             enabled: params.saveAlignedIntermediates
-          ],
-          [
-             path: { "${params.outDir}/preprocessing/${meta.id}/bams/logs" },
-             mode: 'copy',
-             pattern: "*.log",
-             enabled: params.saveAlignedIntermediates
-          ]
+    publishDir = [
+      [
+        path: { "${params.outDir}/preprocessing/${meta.id}/bams/" },
+        mode: 'copy',
+        pattern: "*.bam",
+        enabled: params.saveAlignedIntermediates
+      ],
+      [
+        path: { "${params.outDir}/preprocessing/${meta.id}/bams/logs" },
+        mode: 'copy',
+        pattern: "*.log",
+        enabled: params.saveAlignedIntermediates
       ]
-        ext.args = {[
-          params.dragmapOpts ?: '',
-          "--RGSM ${meta.id} --RGID ${meta.id}"
-        ].join(' ').trim() }
-    }
+    ]
+    ext.args = {[
+      params.dragmapOpts ?: '',
+      "--RGSM ${meta.id} --RGID ${meta.id}"
+    ].join(' ').trim() }
+    ext.prefix = { params.splitFastq ? "${meta.id}_${meta.chunk}" : "${meta.id}" } 
+  }
 
   withName: 'mappingFlow:samtoolsSort' {
     publishDir = [
