@@ -59,7 +59,7 @@ params {
   //tools = 'mutect2,snpeff,haplotypecaller,manta,msisensor,facets,tmb' //ascat'
 
   // Target
-  targetBed = "${projectDir}/test/target/test_vegan.bed"
+  //targetBed = "${projectDir}/test/target/test_vegan.bed"
   //targetBed = "${projectDir}/test/target/TargetRegions.bed"
   //targetBED = "${projectDir}/test/target/Target_bed_lifted_hg38.sort.bed"
 }
